<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.MemberSearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/app_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="@dimen/margin30"
                android:layout_height="@dimen/margin30"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin10"
                android:src="@drawable/ic_refresh"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin5"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font20"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="@dimen/margin30"
                android:layout_height="@dimen/margin30"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin10"
                android:src="@drawable/ic_account"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/home_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/user_name_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/margin5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin5"
                        android:text="user Name"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font20"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin5"
                        android:text="@string/welcome"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font20"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name_ll"
                    android:orientation="vertical"
                    android:padding="@dimen/margin5">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/margin5"
                        app:cardElevation="@dimen/margin5"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/margin3">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/menu_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:itemCount="2"
                                tools:listitem="@layout/item_grid" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/announce_ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/home_ll"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin5">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/margin10"
                            android:text="@string/announcements_title"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font18"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/add_announce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/margin5"
                            android:src="@drawable/ic_add_alert" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/announce_height">

                        <TextView
                            android:id="@+id/no_announce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:text="Announcements not available"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/font16"
                            android:textStyle="bold" />

                        <FrameLayout
                            android:id="@+id/announce_card_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:itemCount="1"
                                tools:listitem="@layout/list_item_announcement" />

                            <com.siffmember.info.ui.view.indicator.ARIndicatorView
                                android:id="@+id/ar_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|bottom"
                                android:orientation="horizontal"
                                app:animate_indicator_scrubbing="true"
                                app:indicator_color="@color/colorAccent1"
                                app:indicator_scrubbing="true"
                                app:indicator_size="15"
                                app:number_of_indicators="4"
                                app:selected_color="@color/colorPrimary" />

                        </FrameLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>